  - We should no longer display target information if we
    do not have a strong contact.
    Re-wrote Next_Target function to only return strong targets.

  - Added controls to go up/down a thermal. Added key to hold
    current depth. See README file for details.

  - Depth and thermal meter now appears on helm screen and nav screen.

  - Use SDL_gfx functions to draw arrows on helm screen.
    Minor code clean-up. Patch provided by Rick.

  - Added patch from Rick to show ordered heading vs actual
    heading on helm screen.

  - Added depth and thermal indicator to the tactical map screen.

  - Added Spanish translation of the manual from Fernando Liebana.

  - Make sure we define DATADIR, even if we don't use a makefile.

  - Thermal layers now filter sound.

  - Rewrote code for getting command line options to make it
    compatable across operating systems.

  - Compatibility functions for WIN32 created. These functions
    are stored in winfunctions.cpp and winfunctions.h
    strncasecmp and strcasestr functions are now duplicated
    and wrapped up in ifdefs.

  - Converted snprintf calls to sprintf for WIN32

  - Converted fabs() calls to abs() in radar.cpp for the WIN32 platform.

  - Dependency unistd.h removed from main.cpp

  - Added thermal layers to listening function Can_Hear().

  - Added DEBUGMAP flag for Makefile to help test MAP class.

  - Added MAP class, which will handle depth and thermal layer information.

============ openssn-0.7 released August 15, 2011 =============

  - Added sounds for pinging, torpedo launch and explosions.

  - Added sounds directory creation to makefile.

  - Added click button for active sonar.

  - Torpedo room buttons looks more torpedo-like.

  - Ships will run from torpedoes, even if they are chasing/attacking.

  - Ships now fire torpedoes at ships they are chasing.

  - Added active sonar for player.

  - Ships and subs should now remain within the map boarders.
