@@ -1,0 +1,6 @@
+Mission 4
+You are patroling through hostile territory. In your 
+area are several enemy destroyers who are securing the 
+area. You are instructed to sink all surface vessels 
+you encounter. Stay on your toes.
+
