@@ -1,0 +1,7 @@
+Mission 5
+There is an enemy Typhoon-class submarine leaving port. You are
+to locate and sink this missile submarine before it gets to
+its patrol station. Watch out for enemy attack subs guarding
+this important asset.
+Begin your search deep down, that is where Typhoons like to
+hide.
