@@ -1,0 +1,6 @@
+0 1 1 5 47 90 150000 150000 75.0
+0 1 1 5 100 100 160000 150000 75.0 Passive
+1 3 0 12 0 130 160000 160000 115.0 Attack
+1 3 0 12 0 330 140000 140000 115.0 Attack
+1 3 0 12 0 0 160000 140000 115.0 Attack
+1 3 0 12 0 180 140000 160000 115.0 Attack
