@@ -1,0 +1,3 @@
+0 1 1 5 150 90 150000 150000 75.0
+0 2 0 8 500 180 150000 140000 75.0 Attack
+0 7 0 5 800 180 150100 140000 75.0 Passive
